almost done main page withour footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				
 				<div class="header-tagline-content content">
 					<div class="row">
-						<div class="hidden-xs hiden-sm col-md-1">
+						<div class="hidden-xs hidden-sm col-md-1">
 							<div class="header-circle-wrapper">
 								<div class="header-circle"></div>
 								<div class="header-circle"></div>
@@ -178,52 +178,65 @@
 		<div class="content">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3"><h2 class="tagline">Керівництво</h2></div>
+					<div class="col-xs-6 col-sm-6 col-md-3"><h2 class="tagline">Керівництво</h2></div>
 					<div class="col-md-1">
-						<div class="controls">
+						<div class="controls hidden-xs hidden-sm">
 							<i class="fa fa-angle-left" aria-hidden="true"></i>
 							<i class="fa fa-angle-right" aria-hidden="true"></i>
 						</div>
 					</div>
-					<div class="col-md-8"></div>
+					<div class="col-md-6"></div>
+					<div class="col-xs-6 col-sm-6 col-md-2">
+						<div class="all-leadership-link">
+							<a href="#">Усе керівництво</a>
+						</div>
+					</div>
 				</div>
 
 				<div class="row">
 					<div class="col-xs-12 col-md-3">
-						<div class="leadership-img hidden-xs hidden-sm">
-							<img src="img/Zurab_Alasania.png" alt="Zurab">
+						<div class="leadership-member">
+							<div class="leadership-img hidden-xs hidden-sm">
+								<img src="img/Zurab_Alasania.png" alt="Zurab">
+							</div>
+							<div class="leadership-name">
+								<a href="#">Зураб Аласанія</a>
+							</div>
+							<div class="leadership-descr">Голова правління ПАТ "НСТУ"</div>
 						</div>
-						<div class="leadership-name">
-							<a href="#">Зураб Аласанія</a>
-						</div>
-						<div class="leadership-descr">Голова правління ПАТ "НСТУ"</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
-						<div class="leadership-img hidden-xs hidden-sm">
-							<img src="img/Zurab_Alasania.png" alt="Zurab">
+						<div class="leadership-member">
+							<div class="leadership-img hidden-xs hidden-sm">
+								<img src="img/Zurab_Alasania.png" alt="Zurab">
+							</div>
+							<div class="leadership-name">
+								<a href="#">Євген Глібовицький</a>
+							</div>
+							<div class="leadership-descr">Відповідальний за просвітницький напрямок діяльності</div>
 						</div>
-						<div class="leadership-name">
-							<a href="#">Євген Глібовицький</a>
-						</div>
-						<div class="leadership-descr">Відповідальний за просвітницький напрямок діяльності</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
-						<div class="leadership-img hidden-xs hidden-sm">
-							<img src="img/Zurab_Alasania.png" alt="Zurab">
+						<div class="leadership-member">
+							<div class="leadership-img hidden-xs hidden-sm">
+								<img src="img/Zurab_Alasania.png" alt="Zurab">
+							</div>
+							<div class="leadership-name">
+								<a href="#">Євген Глібовицький</a>
+							</div>
+							<div class="leadership-descr">Відповідальна за юридичний напрямок діяльності</div>
 						</div>
-						<div class="leadership-name">
-							<a href="#">Євген Глібовицький</a>
-						</div>
-						<div class="leadership-descr">Відповідальна за юридичний напрямок діяльності</div>
 					</div>
 					<div class="col-xs-12 col-md-3">
-						<div class="leadership-img hidden-xs hidden-sm">
-							<img src="img/Zurab_Alasania.png" alt="Zurab">
+						<div class="leadership-member">
+							<div class="leadership-img hidden-xs hidden-sm">
+								<img src="img/Zurab_Alasania.png" alt="Zurab">
+							</div>
+							<div class="leadership-name">
+								<a href="#">Євген Глібовицький</a>
+							</div>
+							<div class="leadership-descr">Відповідальний за економічно-фінансовий напрямок дільності</div>
 						</div>
-						<div class="leadership-name">
-							<a href="#">Євген Глібовицький</a>
-						</div>
-						<div class="leadership-descr">Відповідальний за економічно-фінансовий напрямок дільності</div>
 					</div>
 				</div>
 			</div>
@@ -235,7 +248,7 @@
 			<div class="content">
 				<h2 class="tagline">Пріорітетні проекти</h2>
 				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-6">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<div class="project">
 							<div class="project-img">
 								<img src="img/Mike.jpg" alt="Майкл Щур" class="img-responsive">
@@ -246,7 +259,7 @@
 						</div>
 					</div>
 
-					<div class="hidden-xs hidden-sm col-md-6">
+					<div class="hidden-xs hidden-sm col-md-6 col-lg-6">
 						<div class="project">
 							<div class="project-img">
 								<img src="img/Change_Room_2.jpg" alt="Роздягалка" class="img-responsive">
@@ -254,6 +267,12 @@
 							<div class="project-name">
 								<a href="#">Роздягалка</a>
 							</div>
+						</div>
+					</div>
+					<div class="container">
+						<div class="priority-control-wrapper hidden-md hidden-lg">
+							<div class="priority-control priority-control-active"></div>
+							<div class="priority-control"></div>
 						</div>
 					</div>
 				</div>
@@ -270,9 +289,9 @@
 		<div class="container">
 			<div class="content">
 				<div class="row">
-						<div class="col-md-3"><h2 class="tagline transparent-tag">Прес релізи</h2></div>
+						<div class="col-xs-7 col-sm-7 col-md-3"><h2 class="tagline transparent-tag">Прес релізи</h2></div>
 						<div class="col-md-7"></div>
-						<div class="col-md-2">
+						<div class="col-xs-5 col-sm-5 col-md-2">
 							<div class="all-press-link">
 								<a href="#">Усі прес релізи</a>
 							</div>
@@ -280,46 +299,48 @@
 				</div>
 
 				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-6">
-						<div class="press-releases-title">
-							<h2>Норвезький досвід: як збудувати найбільшу фінансовану суспільство медіагрупу в країні</h2>
-							<div class="grey-text">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+						<div class="press-release">
+							<div class="press-releases-title">
+								Норвезький досвід: як збудувати найбільшу фінансовану суспільство медіагрупу в країні
+							</div>
+							<div class="grey-text press-date">
 								12 грудня 2016
 							</div>
 						</div>	
 					</div>
-					<div class="col-xs-12 col-sm-12 col-md-6">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<div class="row">
 							<div class="col-md-6">
 								<div class="press-release">
 									Важливо поговорити не про сьогодні - важливо говорити про завтра. - Пер Хелгессон, Шедське радіо
-									<div class="grey-text">
+									<div class="grey-text press-date">
 										12 грудня 2016
 									</div>
 								</div>
 							</div>
-							<div class="col-xs-12 col-sm-12 col-md-6">
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 								<div class="press-release">
 									Автономність регіональних новин і важливість рейтингів: секрет лідерства італійського суспільного мовника RAI
-									<div class="grey-text">
+									<div class="grey-text press-date">
 										12 грудня 2016
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-12 col-sm-12 col-md-6">
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 								<div class="press-release">
 									Експерт Ради Європи Лаша Тугуші: "У нинішній ситуації український суспільний мовник може стати проривом"
-									<div class="grey-text">
+									<div class="grey-text press-date">
 										15 червня 2016
 									</div>
 								</div>
 							</div>
-							<div class="col-xs-12 col-sm-12 col-md-6">
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 								<div class="press-release">
 									Аудріус Сяурусевічус: "Політики не повинні впливати на суспільне мовлення"
-									<div class="grey-text">
+									<div class="grey-text press-date">
 										12 грудня 2016
 									</div>
 								</div>
@@ -337,14 +358,18 @@
 				<div class="row">
 					<div class="col-xs-12 col-md-12 col-md-6">
 						<div class="row">
-							<div class="col-md-6"><h2 class="tagline">Наглядова рада</h2></div>
+							<div class="col-xs-8 col-sm-8 col-md-6"><h2 class="tagline">Наглядова рада</h2></div>
 							<div class="col-md-2">
-								<div class="controls">
+								<div class="controls hidden-xs hidden-sm">
 									<i class="fa fa-angle-left" aria-hidden="		true"></i>
 									<i class="fa fa-angle-right" aria-hidden="true"></i>
 								</div>
 							</div>
-							<div class="col-md-4"></div>
+							<div class="col-xs-4 col-sm-4 hidden-md hidden-lg">
+								<div class="all-leadership-link">
+									<a href="#">Уся рада</a>
+								</div>
+							</div>
 						</div>
 					
 						<div class="row">
@@ -411,14 +436,27 @@
 					</div>
 					<div class="col-xs-12 col-md-12 col-md-6">
 						<div class="doc-wrapper">
-							<h2 class="tagline">Документи</h2>
-							<div class="senat-btn-wrapper">
-								<div class="row">
-									<div class="col-xs-6 col-sm-6 col-md-6">
-										<a href="#" class="doc-btn doc-btn-active">Документи</a>
+							<div class="row">
+								<div class="col-xs-6 col-sm-6">
+									<h2 class="tagline">Документи</h2>
+								</div>
+								<div class="col-xs-6 col-sm-6">
+									<div class="all-doc-link">
+										<a href="#">Усі документи</a>
 									</div>
-									<div class="col-md-6">
-										<a href="#" class="doc-btn">Протоколи</a>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-12 col-sm-12 col-md-8">
+									<div class="senat-btn-wrapper">
+										<div class="row">
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<a href="#" class="doc-btn doc-btn-active">Документи</a>
+											</div>
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<a href="#" class="doc-btn">Протоколи</a>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -449,7 +487,7 @@
 											від 9 жовтня 2017 року
 										</div>
 									</div>
-									<div class="protocol">
+									<div class="protocol hidden-xs hidden-sm">
 										<div class="protocol-name">
 											<a href="#">Протокол №20 засідання правління ПАТ НСТУ</a>
 										</div>
@@ -457,7 +495,7 @@
 											від 9 жовтня 2017 року
 										</div>
 									</div>
-									<div class="protocol">
+									<div class="protocol hidden-xs hidden-sm">
 										<div class="protocol-name">
 											<a href="#">Протокол №20 засідання правління ПАТ НСТУ</a>
 										</div>
@@ -465,7 +503,7 @@
 											від 9 жовтня 2017 року
 										</div>
 									</div>
-									<div class="protocol">
+									<div class="protocol hidden-xs hidden-sm">
 										<div class="protocol-name">
 											<a href="#">Протокол №20 засідання правління ПАТ НСТУ</a>
 										</div>
@@ -473,7 +511,7 @@
 											від 9 жовтня 2017 року
 										</div>
 									</div>
-									<div class="protocol">
+									<div class="protocol hidden-xs hidden-sm">
 										<div class="protocol-name">
 											<a href="#">Протокол №20 засідання правління ПАТ НСТУ</a>
 										</div>
@@ -481,7 +519,7 @@
 											від 9 жовтня 2017 року
 										</div>
 									</div>
-									<div class="protocol">
+									<div class="protocol hidden-xs hidden-sm">
 										<div class="protocol-name">
 											<a href="#">Протокол №20 засідання правління ПАТ НСТУ</a>
 										</div>
@@ -489,16 +527,13 @@
 											від 9 жовтня 2017 року
 										</div>
 									</div>
-									<div class="protocol">
+									<div class="protocol hidden-xs hidden-sm">
 										<div class="protocol-name">
 											<a href="#">Протокол №20 засідання правління ПАТ НСТУ</a>
 										</div>
 										<div class="protocol-date">
 											від 9 жовтня 2017 року
 										</div>
-									</div>
-									<div class="all-doc-link">
-										<a href="#">Усі документи</a>
 									</div>
 								</div>
 							</div>
@@ -515,8 +550,39 @@
 				<div class="circle"></div>
 		</div>
 
-		<div class="container content">
-			<h2 class="branchs-tag tagline">Філії ПАТ НСТУ</h2>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-8 col-sm-8">
+					<h2 class="branchs-tag tagline">Філії ПАТ НСТУ</h2>
+				</div>
+				<div class="col-xs-4 col-sm-4 hidden-md hidden-lg">
+					<div class="all-branchs-link">
+						<a href="#">Усі філії</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<div class="branch">
+						<div class="branch-name">Вінницька регіональна дирекція "ВІНТЕРА"</div>
+						<div class="branch-site"><a href="#">http://www.vodtrk.com.ua/</a></div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<div class="branch">
+						<div class="branch-name">Вінницька регіональна дирекція "ВІНТЕРА"</div>
+						<div class="branch-site"><a href="#">http://www.vodtrk.com.ua/</a></div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<div class="branch">
+						<div class="branch-name">Вінницька регіональна дирекція "ВІНТЕРА"</div>
+						<div class="branch-site"><a href="#">http://www.vodtrk.com.ua/</a></div>
+					</div>
+				</div>
+			</div>
+
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 					<div class="branch">
@@ -551,28 +617,7 @@
 						<div class="branch-site"><a href="#">http://www.vodtrk.com.ua/</a></div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<div class="branch">
-						<div class="branch-name">Вінницька регіональна дирекція "ВІНТЕРА"</div>
-						<div class="branch-site"><a href="#">http://www.vodtrk.com.ua/</a></div>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-4">
-					<div class="branch">
-						<div class="branch-name">Вінницька регіональна дирекція "ВІНТЕРА"</div>
-						<div class="branch-site"><a href="#">http://www.vodtrk.com.ua/</a></div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="branch">
-						<div class="branch-name">Вінницька регіональна дирекція "ВІНТЕРА"</div>
-						<div class="branch-site"><a href="#">http://www.vodtrk.com.ua/</a></div>
-					</div>
-				</div>
-				<div class="col-md-4">
+				<div class="col-md-4  hidden-xs hidden-sm">
 					<div class="branch">
 						<div class="branch-name">Вінницька регіональна дирекція "ВІНТЕРА"</div>
 						<div class="branch-site"><a href="#">http://www.vodtrk.com.ua/</a></div>
@@ -713,7 +758,7 @@
 			<div class="content">
 				<div class="get-in-tag">
 					<h2 class="tagline">Потрапити на суспільне</h2>
-					<h4>Ми відкриті для Ваших думок. Напишіть нам, ми почуємо кожного!</h4>
+					<h4 class="tagline-descr">Ми відкриті для Ваших думок. Напишіть нам, ми почуємо кожного!</h4>
 				</div>
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
@@ -743,10 +788,9 @@
 
 	<section class="footer">
 		<div class="container">
-			<div class="content">
-				<div class="row">
-					<div class="col-md-3"></div>
-					<div class="col-md-3">
+			<div class="row">
+					<div class="col-xs-12 col-sm-12 col-md-3"></div>
+					<div class="col-xs-12 col-sm-12 col-md-3">
 						<div class="footer-tag">
 							структура
 						</div>
@@ -763,7 +807,7 @@
 							<a href="#">Філії</a>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-xs-12 col-sm-12 col-md-3">
 						<div class="footer-tag">
 							документи
 						</div>
@@ -783,7 +827,7 @@
 							<a href="#">Положення</a>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-xs-12 col-sm-12 col-md-3">
 						<div class="footer-tag">
 							прес-кіт
 						</div>
@@ -801,7 +845,6 @@
 						</div>
 
 					</div>
-				</div>
 			</div>
 		</div>
 	</section>
