added Rada page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="row">
 					<div class="col-xs-8 col-sm-8 col-md-4">
 						<div class="logo-nav">
-							<img src="assets/logo/logo.svg"alt="Logo">
+							<img src="assets/logo/logo.svg" alt="Logo">
 						</div>
 					</div>
 					<div class="col-xs-1 col-sm-1 col-md-4"></div>
@@ -188,7 +188,7 @@
 					<div class="col-md-6"></div>
 					<div class="col-xs-6 col-sm-6 col-md-2">
 						<div class="all-leadership-link">
-							<a href="#">Усе керівництво</a>
+							<a href="rada.html">Усе керівництво</a>
 						</div>
 					</div>
 				</div>
