added all-docs.html open-news.html & mobile versions

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<div class="col-md-7"></div>
 					<div class="col-xs-6 col-sm-6 col-md-2">
 						<div class="all-news-link">
-							<a href="#">Усі новини</a>
+							<a href="news.html">Усі новини</a>
 						</div>
 					</div>
 				</div>
@@ -101,7 +101,7 @@
 								<img src="img/news_image_5.jpg" alt="">
 							</div>
 							<div class="news-title">
-								<a href="#">Зареєстровано юридичну особу ПАТ НСТУ</a>
+								<a href="open-news.html">Зареєстровано юридичну особу ПАТ НСТУ</a>
 							</div>
 							<div class="grey-text">12 грудня 2016</div>
 						</div>
@@ -112,7 +112,7 @@
 								<img src="img/news_image_3.jpg" alt="">
 							</div>
 							<div class="news-title">
-								<a href="#">НСТУ зареєструють у другій половині січня 2017-го</a>
+								<a href="open-news.html">НСТУ зареєструють у другій половині січня 2017-го</a>
 							</div>
 							<div class="grey-text">07 липня 2016</div>
 						</div>
@@ -123,7 +123,7 @@
 								<img src="img/news_image_2.jpg" alt="">
 							</div>
 							<div class="news-title">
-								<a href="#">Можливість у зручний час бачити важливе</a>
+								<a href="open-news.html">Можливість у зручний час бачити важливе</a>
 								</div>
 							<div class="grey-text">29 жовтня 2016</div>
 						</div>
@@ -134,7 +134,7 @@
 								<img src="img/news_image_4.jpg" alt="">
 							</div>
 							<div class="news-title">
-								<a href="#">НСТУ зареєструють у другій половині січня 2017-го</a>
+								<a href="open-news.html">НСТУ зареєструють у другій половині січня 2017-го</a>
 							</div>
 							<div class="grey-text">12 грудня 2016</div>
 						</div>
@@ -246,7 +246,7 @@
 	<section class="priority-projects">
 		<div class="container">
 			<div class="content">
-				<h2 class="tagline">Пріорітетні проекти</h2>
+				<h2 class="tagline priority-tagline">Пріорітетні проекти</h2>
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<div class="project">
@@ -442,7 +442,7 @@
 								</div>
 								<div class="col-xs-6 col-sm-6">
 									<div class="all-doc-link">
-										<a href="#">Усі документи</a>
+										<a href="all-docs.html">Усі документи</a>
 									</div>
 								</div>
 							</div>
