--- a/rada.html
+++ b/rada.html
@@ -47,9 +47,9 @@
 		</div>
 
 		<div class="container">
-			<div class="content">
+			<div class="rada-content-wrapper">
 				<h2 class="tagline rada-tagline">Наглядова рада</h2>
-			
+				
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
 						<div class="senate-member senate-member-mobile">
@@ -207,41 +207,40 @@
 		</div>
 
 		<div class="footer-white">
-		<div class="container">
-			<div class="content">
-				<div class="all-navbar">
-					<div class="col-xs-8 col-sm-8 col-md-4">
-						<div class="logo-nav">
-							<img src="assets/logo-colour/logo-colour.svg" alt="Logo">
+			<div class="container">
+				<div class="content">
+					<div class="all-navbar">
+						<div class="col-xs-8 col-sm-8 col-md-4">
+							<div class="logo-nav">
+								<img src="assets/logo-colour/logo-colour.svg" alt="Logo">
+							</div>
 						</div>
-					</div>
 
-					<div class="col-xs-1 col-sm-1 col-md-4"></div>
-					<div class="col-xs-1 col-sm-1 col-md-2">
-						<div class="nav-element">
-							<div class="search nav-icons">
-								<img src="assets/search/search-blue.svg" alt="Search">
+						<div class="col-xs-1 col-sm-1 col-md-4"></div>
+						<div class="col-xs-1 col-sm-1 col-md-2">
+							<div class="nav-element">
+								<div class="search nav-icons">
+									<img src="assets/search/search-blue.svg" alt="Search">
+								</div>
+								<span class="icon-text blue-text hidden-xs hidden-sm">Пошук</span>
 							</div>
-							<span class="icon-text blue-text hidden-xs hidden-sm">Пошук</span>
 						</div>
-					</div>
-					<div class="col-xs-1 col-sm-1 col-md-2">
-						<div class="nav-element">
-							<div class="menu-nav nav-icons">
-								<img src="assets/menu/menu-blue.svg" alt="Menu">
+						<div class="col-xs-1 col-sm-1 col-md-2">
+							<div class="nav-element">
+								<div class="menu-nav nav-icons">
+									<img src="assets/menu/menu-blue.svg" alt="Menu">
+								</div>
+								<span class="icon-text blue-text hidden-xs hidden-sm">Меню</span>
 							</div>
-							<span class="icon-text blue-text hidden-xs hidden-sm">Меню</span>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-
-
-
-
 	</section>
+
+
 	
 </body>
 </html>
